--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -105,12 +105,12 @@ catkin_package(
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
-catkin_package(
+# catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES common
 #  CATKIN_DEPENDS rospy std_--msgs
 #  DEPENDS system_lib
-)
+# )
 
 ###########
 ## Build ##
