--- a/src/x3plus_moveit_config/package.xml
+++ b/src/x3plus_moveit_config/package.xml
@@ -5,8 +5,8 @@
   <description>
      An automatically generated package with all the configuration and launch files for using the yahboomcar_X3plus with the MoveIt! Motion Planning Framework
   </description>
-  <author email="kg354654932@gmail.com">GUN</author>
-  <maintainer email="kg354654932@gmail.com">GUN</maintainer>
+  <author email="kg354654932@gmail.com">GEON</author>
+  <maintainer email="kg354654932@gmail.com">GEON</maintainer>
 
   <license>BSD</license>
 
